MODRTACHCE-37: Ensure instance formats are retrieved for rtac batch request